lua-factory: Replace assertions with g_return_* macros

Assertions might be disabled, and really shouldn't be used from within a
library, but this should protect us enough for debugging purposes.

https://bugzilla.gnome.org/show_bug.cgi?id=788757